--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Альтера</title>
+  <title>Спинор</title>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script type="text/javascript">
       (function() {
@@ -11,6 +11,22 @@
           emailjs.init('18doDoRxEuYwjBvzD');
       })();
   </script>
+  <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+  m[i].l=1*new Date();
+  for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+  k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+  ym(92181197, "init", {
+       clickmap:true,
+       trackLinks:true,
+       accurateTrackBounce:true
+  });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/92181197" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 </head>
 <body class="page">
 
@@ -36,7 +52,7 @@
         <img src="<%=require('../src/images/header/phone.svg')%>" alt="телефон" class="header__img">
         <p class="header__tel">+7 903 807-08-88</p>
       </a>
-      <a class="header__call">Заказать консультацию</a>
+      <a class="header__call">Получить консультацию</a>
     </div>
     <div class="header__burger-type">
       <div class="header__burger-links">
@@ -49,7 +65,7 @@
           <li class="header__link"><a class="header__item" href="#photo">Фото</a></li>
           <li class="header__link"><a class="header__item" href="#contacts">Контакты</a></li>
         </ul>
-        <a class="header__consult-burger">Заказать консультацию</a>
+        <a class="header__consult-burger">Получить консультацию</a>
         <a class="header__area" href="tel:+79038070888">
           <img src="<%=require('../src/images/header/phone.svg')%>" alt="телефон" class="header__img">
           <p class="header__burger-link">+7 903 807-08-88</p>
@@ -81,7 +97,6 @@
   <section class="section about" id="about">
     <h2 class="about__title">Обзор помещения</h2>
     <div class="about__block">
-      <img src="<%=require('../src/images/about/about.webp')%>" alt="фото помещения" class="about__img">
       <div class="about__item">
         <p class="about__text">Помещение находится в <i>г. Тверь по адресу ул. Академика Туполева, д. 111</i>. Город занимает наиболее выгодную с экономической точки зрения расположение - между Москвой и Санкт-Петербургом. Тверь является крупным транспортным узлом, пересечением многих туристических и гастрольных маршрутов.</p>
         <p class="about__text">Здание находится рядом с оживленной улицей на пересечении Центрального и Московского районов города. Рядом находятся <i>4 университета,2 общеобразовательные школы, бизнес-центр, стадион, 5 банков (2 филиала СберБанка и др.), продовольственные магазины, парк и сквер</i>, что обеспечивает высокую интенсивность проходимости потока как в будние, так и в выходные дни.</p>
@@ -97,7 +112,7 @@
     <div class="technical__block">
       <div class="technical__item">
         <img src="<%=require('../src/images/technical/useful_area.webp')%>" alt="полезная площадь" class="technical__img">
-        <p class="technical__parameter">1056,9</p>
+        <p class="technical__parameter">560,8</p>
         <p class="technical__text">Полезная площадь, кв. м</p>
       </div>
       <div class="technical__item">
@@ -107,7 +122,7 @@
       </div>
       <div class="technical__item">
         <img src="<%=require('../src/images/technical/floors_number.webp')%>" alt="количество этажей" class="technical__img">
-        <p class="technical__parameter">3</p>
+        <p class="technical__parameter">1</p>
         <p class="technical__text">Количество этажей</p>
       </div>
       <div class="technical__item">
@@ -120,7 +135,7 @@
       <ul class="technical__list">
         <li class="technical__text technical__text_grid">Высота потолков, м : 3,3</li>
         <li class="technical__text technical__text_grid">Полы: плиточные</li>
-        <li class="technical__text technical__text_grid">Стены: кирпич, газосиликат</li>
+        <li class="technical__text technical__text_grid">Стены: кирпич</li>
         <li class="technical__text technical__text_grid">Перегородки: кирпич, пенобетон</li>
       </ul>
       <ul class="technical__list">
@@ -140,10 +155,6 @@
   <section class="section photo" id="photo">
     <h2 class="photo__title">Фото</h2>
     <div class="photo__slider">
-      <!-- <img src="<%=require('../src/images/photo/main.webp')%>" alt="фото помещения" class="photo__img">
-      <img src="<%=require('../src/images/photo/butt.webp')%>" alt="фото помещения" class="photo__img">
-      <img src="<%=require('../src/images/photo/back.webp')%>" alt="фото помещения" class="photo__img">
-      <img src="<%=require('../src/images/photo/back2.webp')%>" alt="фото помещения" class="photo__img"> -->
     </div>
     <a class="photo__arrow-left"></a>
     <a class="photo__arrow-right"></a>
@@ -212,7 +223,7 @@
         <img src="<%=require('../src/images/footer/phone.svg')%>" alt="телефон" class="footer__img">
         <p class="footer__tel">+7 903 807-08-88</p>
       </a>
-      <a class="footer__call">Заказать консультацию</a>
+      <a class="footer__call">Получить консультацию</a>
     </div>
   </footer>
 
@@ -228,7 +239,7 @@
     <div class="popup__container">
       <button class="popup__close-button" type="button"></button>
       <form class="popup__form" name="popup-form" id="popup-form">
-        <h3 class="popup__title">Заказать консультацию</h3>
+        <h3 class="popup__title">Получить консультацию</h3>
         <p class="popup__subtitle">Мы перезвоним Вам в течение 15 минут</p>
         <section class="popup__form-section">
           <input type="tel" data-validate-field="tel" class="popup__input" id="tel" name="tel" placeholder="+7 (___) ___-__-__" required>
