обзор и по мелочи

--- a/src/index.html
+++ b/src/index.html
@@ -99,9 +99,8 @@
     <div class="about__block">
       <div class="about__item">
         <p class="about__text">Помещение находится в <i>г. Тверь по адресу ул. Академика Туполева, д. 111</i>. Город занимает наиболее выгодную с экономической точки зрения расположение - между Москвой и Санкт-Петербургом. Тверь является крупным транспортным узлом, пересечением многих туристических и гастрольных маршрутов.</p>
-        <p class="about__text">Здание находится рядом с оживленной улицей на пересечении Центрального и Московского районов города. Рядом находятся <i>4 университета,2 общеобразовательные школы, бизнес-центр, стадион, 5 банков (2 филиала СберБанка и др.), продовольственные магазины, парк и сквер</i>, что обеспечивает высокую интенсивность проходимости потока как в будние, так и в выходные дни.</p>
-        <p class="about__text">В соседних зданиях расположены <i>5 аптек, 3 автобусные остановки находятся рядом со зданием</i>, которые формируют высокий трафик в утренние и вечерние часы. Вокруг помещения имеется <i>более 50 парковочных мест</i>. В радиусе 500 метров расположено больше <i>100 жилых домов</i> - благодаря этому обеспечивается высокая конверсия и лучшие продажи.</p>
-        <p class="about__text">Для удобства поставки товара установлен <i>грузовой подъемник</i>.</p>
+        <p class="about__text">Здание имеет удачное расположение по направлению выезда из города в Заволжском районе. Такая особенность особенно повышает интенсивность потока в выходные и праздничные дни.</p>
+        <p class="about__text">В соседних зданиях расположены <i>2 аптеки, 2 автобусные остановки находятся рядом со зданием</i>, которые формируют высокий трафик в утренние и вечерние часы. Вокруг помещения имеется <i>более 50 парковочных мест</i>. В радиусе 500 метров расположено больше <i>100 жилых домов</i> - благодаря этому обеспечивается высокая конверсия и лучшие продажи.</p>
         <a class="about__link" href="./history.html">Подробнее о городе Тверь</a>
       </div>
     </div>
@@ -117,8 +116,8 @@
       </div>
       <div class="technical__item">
         <img src="<%=require('../src/images/technical/land_area.webp')%>" alt="площадь участка" class="technical__img">
-        <p class="technical__parameter">2285</p>
-        <p class="technical__text">Площадь участка, кв. м</p>
+        <p class="technical__parameter">3,3</p>
+        <p class="technical__text">Высота потолков, м</p>
       </div>
       <div class="technical__item">
         <img src="<%=require('../src/images/technical/floors_number.webp')%>" alt="количество этажей" class="technical__img">
@@ -133,15 +132,15 @@
     </div>
     <div class="technical__grid">
       <ul class="technical__list">
-        <li class="technical__text technical__text_grid">Высота потолков, м : 3,3</li>
+        <li class="technical__text technical__text_grid">Отделка стен: окраска</li>
         <li class="technical__text technical__text_grid">Полы: плиточные</li>
-        <li class="technical__text technical__text_grid">Стены: кирпич</li>
-        <li class="technical__text technical__text_grid">Перегородки: кирпич, пенобетон</li>
+        <li class="technical__text technical__text_grid">Стены: кирпичные</li>
+        <li class="technical__text technical__text_grid">Перегородки: кирпичные</li>
       </ul>
       <ul class="technical__list">
-        <li class="technical__text technical__text_grid">Перекрытия: железобетон</li>
-        <li class="technical__text technical__text_grid">Фундамент: бетон</li>
-        <li class="technical__text technical__text_grid">Оконные проемы: стеклопакеты, витражи алюминиевые</li>
+        <li class="technical__text technical__text_grid">Перекрытия: железобетонные</li>
+        <li class="technical__text technical__text_grid">Фундамент: бетонный</li>
+        <li class="technical__text technical__text_grid">Оконные проемы: стеклопакеты</li>
         <li class="technical__text technical__text_grid">Дверные проемы: филенчатые</li>
       </ul>
     </div>
